# computils

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/grid/: dynamic_2d.rs  hex.rs  mod.rs  n_dimensional.rs  static_2d.rs
src/grid_point/: hex.rs  n_dimensional.rs  signed.rs  unsigned.rs
src/helper/: mod.rs
src/line/: mod.rs
src/math/: matrix.rs  mod.rs
src/point/: dynamic_point.rs  hex.rs  mod.rs  n_dimensional.rs  point.rs  signed.rs  static_point.rs  u_point.rs  unsigned.rs
src/tree/: binary.rs  mod.rs  node.rs
